[tool.poetry]
name = "ai-finance-asst"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scikit-learn = "^1.5.1"
streamlit = "^1.38.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
sentence-transformers = "^3.0.1"
transformers = {extras = ["torch"], version = "^4.44.2"}
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
